--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eject": "react-scripts eject",
     "yarn:install": "yarn",
     "yarn:outdated": "yarn outdated || cd .",
-    "yarn:update": "yarn upgrade-interactive --latest"
+    "yarn:update": "yarn upgrade-interactive --latest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +51,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/gdm-xr-three"
+  "homepage": "https://gdmgent-2122-xr.github.io/diorama-DanteWeverbergh",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
