--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@react-spring/three": "^9.3.1",
-    "@react-three/cannon": "^4.2.0",
-    "@react-three/drei": "^8.0.0",
+    "@react-spring/three": "^9.4.0",
+    "@react-three/cannon": "^4.4.0",
+    "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.21",
     "@react-three/flex": "^0.7.0",
-    "@react-three/postprocessing": "^2.0.5",
+    "@react-three/postprocessing": "^2.1.2",
     "@react-three/test-renderer": "^7.0.20",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "leva": "^0.9.16",
+    "leva": "^0.9.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "three": "^0.135.0",
-    "three-stdlib": "^2.6.1",
+    "three": "^0.136.0",
+    "three-stdlib": "^2.6.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -53,6 +53,7 @@
   },
   "homepage": "https://gdmgent-2122-xr.github.io/diorama-DanteWeverbergh",
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "postcss-normalize": "^10.0.1"
   }
 }
